--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     <a class="child" href="#reccomendations">
                         our reccomendations
                     </a><div class="vl"></div>
-                    <a class="child" href="#">
+                    <a class="child" href="#reviews">
                         reviews
                     </a><div class="vl"></div>
-                    <a class="child" href="#">
+                    <a class="child" href="#footer">
                         footer
                     </a>
                 </div>
@@ -513,6 +513,7 @@
 
         </div>
         <div class="reviews">
+            <a name="reviews"></a>
             <h1>
                 Reivews
             </h1>
@@ -676,6 +677,7 @@
             </div>
         </div>
         <div class="footer">
+            <a name ="footer"></a>
             <div class="tnc">
                 <a href="">
                     Terms and conditions
