--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>    
     <head>        
-        <title>nigga</title>        
+        <title>First-website</title>        
         <meta charset="utf-8" />        
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" />  
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">   
